k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: localsre
  labels:
    app.kubernetes.io/name: localsre-lab
    environment: production-like
